apps/nextjs-hello-world/overlays/qa/resourcelimits_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  template:
    spec:
      containers:
        - name: hello-world
          resources:
            limits:
              memory: 500Mi
              cpu: 100m
            requests:
              memory: 100Mi
              cpu: 100m
