apps/nextjs-hello-world/overlays/qa/ingress_patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextjs-hello-world
spec:
  ingressClassName: "nginx"
  rules:
  - host: qa.127.0.0.1.nip.io
    http:
      paths:
      - path: /nextjs-hello-world/(.*)
        pathType: Prefix
        backend:
          service:
            name: nextjs-hello-world
            port:
              number: 3000
